# qtsvg-feedstock

./: README.md  abs.yaml
recipe/: bld.bat  build.sh  conda_build_config.yaml  meta.yaml  run_qt_test.bat  run_qt_test.sh
recipe/test/: CMakeLists.txt  test_qtsvg.cpp
